--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
                     <execution>
                         <id>check</id>
                         <goals>
-<!--                            <goal>check</goal>-->
+                            <goal>check</goal>
                         </goals>
                         <configuration>
                             <rules>
@@ -71,6 +71,7 @@
                                     </limits>
                                 </rule>
                             </rules>
+                            <haltOnFailure>false</haltOnFailure>
                         </configuration>
                     </execution>
                 </executions>
